<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.passengerapp.ui.screens.passengercreating.PassengerCreatingViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screens.passengercreating.PassengerCreatingFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/airplane" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/hi"
                android:textSize="50sp"
                app:layout_constraintBottom_toTopOf="@+id/containerPassengerCreating"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerPassengerCreatingTransparent"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:alpha="0.65"
                android:background="@drawable/shape_rounded_rectangle"
                app:layout_constraintBottom_toBottomOf="@+id/guidelineBottom"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toTopOf="@+id/guidelineTop">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerPassengerCreating"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/guidelineBottom"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toTopOf="@+id/guidelineTop">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/TextTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/create_your_passenger"
                    android:textSize="26sp"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvErrorNameInput"
                    style="@style/TextErrorStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
                    app:processValidationResult="@{viewModel.nameValidationResult}"
                    tools:text="Error" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/shape_rounded_rectangle_for_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/name"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@={viewModel.name}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tvErrorTripsInput"
                    style="@style/TextErrorStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
                    app:processValidationResult="@{viewModel.tripsValidationResult}"
                    tools:text="Error" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout3"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/shape_rounded_rectangle_for_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/trips"
                        android:inputType="number"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@={viewModel.trips}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tvChooseAirline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/choose_airline"
                    android:textColor="#2196F3"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bnCreatePassenger"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_rounded_rectangle_for_button"
                    android:backgroundTint="@color/black"
                    android:text="@string/create"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    app:enableButton="@{viewModel.createPassengerEnabled}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvChooseAirline" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAirlines"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/containerPassengerCreatingTransparent"/>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.85" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>